# cmake-coverage

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  vagrantfile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: blank.yml  build.yml
lib1/: CMakeLists.txt
lib1/src/: lib1.cpp  lib1.h
lib1/src/my-header-dir/: my-header.h
lib1/test/: CMakeLists.txt  TestsRunner.cpp  test1.cpp
lib2/: CMakeLists.txt
lib2/src/: lib2.cpp  lib2.h
lib2/test/: CMakeLists.txt  TestsRunner.cpp  test1.cpp
main-exe/: CMakeLists.txt
main-exe/src/: main.cpp
scripts/: build.sh  build_Debug.bat  coverage.sh
scripts/vagrant/: bootstrap-debian.sh  prepare-box.sh
scripts/vagrant/provision/debian/: install-00-base.sh  install-10-gcov.sh  install-99-cleanup.sh
